tests/snapshots/cli_status__checksum_check_off.snap
---
source: tests/cli_status.rs
assertion_line: 187
expression: output
---
database: app.db
migrations dir: db/migrations
checksum check: off

  applied   drifted   snapshot   version                            file
  -------   -------   --------   --------------------------------   -----------------------------------------
  yes       —         yes        20240101000000_create_users        20240101000000_create_users.sql

summary: 1 applied, 0 pending
