tests/snapshots/cli_status__orphan_applied.snap
---
source: tests/cli_status.rs
expression: output
---
database: app.db
migrations dir: db/migrations
checksum check: on

  applied   drifted   snapshot   version                            file
  -------   -------   --------   --------------------------------   -----------------------------------------
  yes       no        yes        20240101000000_create_users        20240101000000_create_users.sql
  yes       —         —          20240102000000_orphan              —

summary: 2 applied, 0 pending, 0 drifted
