tests/snapshots/cli_status__pending_present.snap
---
source: tests/cli_status.rs
expression: output
---
database: app.db
migrations dir: db/migrations
checksum check: on

  applied   drifted   snapshot   version                            file
  -------   -------   --------   --------------------------------   -----------------------------------------
  yes       no        yes        20240101000000_create_users        20240101000000_create_users.sql
  yes       no        yes        20240102000000_create_posts        20240102000000_create_posts.sql
  no        —         —          20240103000000_add_comments        20240103000000_add_comments.sql

summary: 2 applied, 1 pending, 0 drifted
